--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Poppins', sans-serif;
     background-color: #6600FF;
-    background-image: url('blurry-gradient-haikei.svg');
+    background-image: url('./blurry-gradient-haikei.svg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
